--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -3,10 +3,10 @@ server {
     server_name localhost;
 
     root /var/www/html/public;
-    index show.html.twig index.html;
+    index index.php;
 
     location / {
-        try_files $uri /show.html.twig$is_args$args;
+        try_files $uri /index.php$is_args$args;
     }
 
     location ~ \.php$ {
