--- a/app/config/packages/framework.yaml
+++ b/app/config/packages/framework.yaml
@@ -3,7 +3,13 @@ framework:
     secret: '%env(APP_SECRET)%'
 
     # Note that the session will be started ONLY if you read or write from it.
-    session: true
+    session:
+        handler_id: null
+        cookie_secure: auto
+        cookie_samesite: lax
+        storage_factory_id: session.storage.factory.native
+        cookie_lifetime: 1300
+        gc_maxlifetime: 1300
 
     #esi: true
     #fragments: true
