--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,12 @@ services:
     working_dir: /var/www/html
     volumes:
       - ./app:/var/www/html
+      - ./docker/php/php.ini:/usr/local/etc/php/conf.d/php.ini
     tty: true
     depends_on:
       - mysql
+    ports:
+      - "9003:9003"
 
   nginx:
     image: nginx:alpine
